# alpha-arena

./: .env.example  .gitignore  AI trading in real markets.webarchive  CLAUDE_MEMORY.md  QUICKSTART.md  README.md  THE_ALPHA_CHRONICLES.md  alpha  cli.py  config.example.yaml  pyproject.toml  requirements.txt  start
docs/: CLI_API_REFERENCE.md  CRITICAL_INTEGRATION_ANALYSIS.md  MACOS_APP_MANUAL.md  OPERATIONAL_MANUAL.md  POLYMARKET_API_INTEGRATION_ANALYSIS.md  TESTING.md  USER_MANUAL.md  WEB_APP_MANUAL.md  index.md
macos-app/: Package.swift  build.sh
macos-app/AlphaArena/: AlphaArenaApp.swift  AppDelegate.swift  PreferencesWindowController.swift
macos-app/AlphaArena.xcodeproj/: project.pbxproj
macos-app/AlphaArenaTests/: ModelTests.swift  ServiceTests.swift  ViewTests.swift
scripts/: build-macos-app.sh  check.sh  create-macos-app.sh  generate-icons.py  install-autostart.sh  macos-app-setup.py  run_web.sh  setup.sh  test.sh
src/: __init__.py
src/agent/: __init__.py  base.py  llm.py  selector.py
src/agents/: __init__.py  base.py  coordinator.py  debate.py  execution.py  reflection.py  research.py  risk.py
src/analysis/: __init__.py  dashboard.py  performance.py  strategy.py  wallet.py
src/arbitrage/: __init__.py  detector.py  platforms.py
src/backtest/: __init__.py  comparison.py  data.py  engine.py  metrics.py  (+3 more)
tests/: __init__.py  conftest.py  test_api.py  test_backtest.py  test_core_types.py  test_debate.py  test_e2e.py  test_indicators.py  test_integration.py  test_llm_providers.py  test_memory.py  test_pnl.py  test_risk.py  test_signals.py
(+72 files in other folders)
